# mario-game

./: .gitignore  CMakeLists.txt  GAMEPLAY.md  Mario.vcxproj  Mario.vcxproj.filters  MarioGame.sln  crash_trace.txt  main.cpp
animation/: Animation.cpp  Animation.h
assets/: AssetIDs.h
audio/: AudioManager.cpp  AudioManager.h
core/: Game.cpp  GameObject.cpp  GameObject.h
gameobject/: Block.h  Breakable.cpp  Breakable.h  Brick.cpp  Brick.h  BrickDebrisEffect.cpp  BrickDebrisEffect.h  Buff.cpp  Buff.h  Coin.cpp  Coin.h  CounterAttack.cpp  CounterAttack.h  DynamicBlock.h  Enemy.cpp  Enemy.h  EnemyFireball.cpp  EnemyFireball.h  FireBlast.cpp  FireBlast.h  Fireball.cpp  Fireball.h  Flag.cpp  Flower.h  Goomba.cpp  Goomba.h  GroundBlock.cpp  GroundBlock.h  Hammer.cpp  Hammer.h  HammerBro.cpp  HammerBro.h  Koopa.cpp  Koopa.h  Koopas.cpp  Koopas.h  LightningEffect.cpp  LightningEffect.h  LuckyBlock.cpp  LuckyBlock.h  (+25 more)
gameplay/: GameManager.cpp  GameManager.h  Map.cpp  Map.h  SceneManager.cpp  SceneManager.h
input/: KeyEventHandler.h  MarioInputHandler.cpp  MarioInputHandler.h
levels/: Level.cpp  Level_1.cpp  Level_1.txt  Level_2.cpp  Level_2.txt  Level_3.cpp  Level_3.txt  Level_4.cpp  Level_4.txt  Level_5.cpp  Level_5.txt  testmap.txt  testmaplevel3.txt
render/: Camera.cpp  Camera.h  Sprite.cpp  Sprite.h  Sprites.cpp
src/: main.cpp
src/engine/audio/: AudioManager.cpp  AudioManager.h
src/engine/core/: Camera.cpp  Camera.h  Collision.cpp  Collision.h  Debug.cpp  Debug.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  debug.cpp
src/engine/graphics/: Animation.cpp  Animation.h  Animations.cpp  Animations.h  Sprite.cpp  Sprite.h  Sprites.cpp  Sprites.h  Textures.cpp  Textures.h
src/engine/input/: KeyEventHandler.h
src/game/: ResourceLoader.cpp  ResourceLoader.h
src/game/effects/: BrickDebrisEffect.cpp  BrickDebrisEffect.h  CounterAttack.cpp  CounterAttack.h  LightningEffect.cpp  LightningEffect.h
src/game/entities/: Enemy.cpp  Enemy.h  Goomba.cpp  Goomba.h  HammerBro.cpp  HammerBro.h  Koopa.cpp  Koopa.h  Mario.cpp  Mario.h  MarioInputHandler.cpp  MarioInputHandler.h  PiranhaPlant.cpp  PiranhaPlant.h  VenusFireTrap.cpp  VenusFireTrap.h
src/game/items/: Buff.cpp  Buff.h  Prop.cpp  Prop.h  PropSpawner.cpp  PropSpawner.h
src/game/objects/: Block.h  Breakable.cpp  Breakable.h  DynamicBlock.h  GroundBlock.cpp  GroundBlock.h  LuckyBlock.cpp  LuckyBlock.h  Pipe.cpp  Pipe.h  Platform.cpp  Platform.h  StaticBlock.h
src/game/scenes/: Map.h  (+6 more)
ui/: HUD.cpp  HUD.h  Intro.cpp  Intro.h  Scene.h  WorldMap.cpp  WorldMap.h
(+18 files in other folders)
